--- a/MDB_emedded_movies.ipynb
+++ b/MDB_emedded_movies.ipynb
@@ -30,7 +30,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ['MONGODB_ATLAS_URI'] = 'mongodb+srv://AIOPS:aCHODesAeNCu99@cluster0.ozciyn7.mongodb.net/?retryWrites=true&w=majority'"
+        "os.environ['MONGODB_ATLAS_URI'] = 'mongodb+srv://user:password@cluster0.ozciyn7.mongodb.net/?retryWrites=true&w=majority'"
       ],
       "metadata": {
         "id": "Jvq1brSA0p6_"
@@ -61,22 +61,10 @@
         "collection_name = 'embedded_movies'"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iEXD37PDr29k",
-        "outputId": "8a1c2fb3-73aa-4e4f-e1bf-e95292adf5bf"
+        "id": "iEXD37PDr29k"
       },
-      "execution_count": 48,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "mongodb+srv://AIOPS:aCHODesAeNCu99@cluster0.ozciyn7.mongodb.net/?retryWrites=true&w=majority\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
