--- a/MDB_emedded_movies.ipynb
+++ b/MDB_emedded_movies.ipynb
@@ -15,6 +15,16 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "# Load the dataset from Hugging Face (AIatMongoDB/embedded_movies)\n",
+        "Link: https://huggingface.co/datasets/AIatMongoDB/embedded_movies"
+      ],
+      "metadata": {
+        "id": "TIsBaLX0TN3_"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -27,6 +37,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Update user and password in the URI"
+      ],
+      "metadata": {
+        "id": "eOC5HDjoUX4B"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "import os\n",
@@ -35,7 +54,7 @@
       "metadata": {
         "id": "Jvq1brSA0p6_"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -49,7 +68,7 @@
       "metadata": {
         "id": "bBMZJlWOrR-b"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -74,8 +93,45 @@
       "metadata": {
         "id": "T9nGB8uc7VNF"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Clear out the collection if you want to start from scratch"
+      ],
+      "metadata": {
+        "id": "uYPz4W2DGaZy"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "doc_count = embedded_movies_collection.count_documents (filter = {})\n",
+        "print (f\"Document count before delete : {doc_count:,}\")\n",
+        "\n",
+        "result = embedded_movies_collection.delete_many(filter= {})\n",
+        "print (f\"Deleted docs : {result.deleted_count}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rGOvb-QDCi2K",
+        "outputId": "72ff55e8-f603-416b-db7b-5a431ccf68ea"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Document count before delete : 1,500\n",
+            "Deleted docs : 1500\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -85,7 +141,31 @@
       "metadata": {
         "id": "WLo8HbFU7awh"
       },
-      "execution_count": 50,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Let's tske a look at the huggingface dataset"
+      ],
+      "metadata": {
+        "id": "abfK19HHFqBq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#print(dataset)\n",
+        "for movie in dataset['train']:\n",
+        "    doc_movie = json_util.loads(json_util.dumps(movie))\n",
+        "    print(doc_movie)\n",
+        "    break"
+      ],
+      "metadata": {
+        "id": "qacsR0uAE9bf"
+      },
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,8 +176,17 @@
       "metadata": {
         "id": "VEqpUoKs7k3J"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Process 1k at a time"
+      ],
+      "metadata": {
+        "id": "ckkJdvhxWfhq"
+      }
     },
     {
       "cell_type": "code",
@@ -105,7 +194,6 @@
         "for movie in dataset['train']:\n",
         "    doc_movie = json_util.loads(json_util.dumps(movie))\n",
         "    insert_data.append(doc_movie)\n",
-        "\n",
         "    if len(insert_data) == 1000:\n",
         "        embedded_movies_collection.insert_many(insert_data)\n",
         "        print(\"1000 records ingested\")\n",
@@ -118,30 +206,7 @@
         "print(\"Data Ingested\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oEv-VViv7pQj",
-        "outputId": "903a7c3d-349d-4deb-e358-11a171235b97"
-      },
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1000\n",
-            "1000 records ingested\n",
-            "Data Ingested\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "NTfhr4yc8LOy"
+        "id": "oEv-VViv7pQj"
       },
       "execution_count": null,
       "outputs": []
