--- a/labs/MDB_lab2_1.ipynb
+++ b/labs/MDB_lab2_1.ipynb
@@ -17,7 +17,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Copy requirements.txt into /content/drive/MyDrive/"
+        "git clone https://github.com/sujee/mongodb-atlas-vector-search.git\n",
+        "\n",
+        "Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into /content/drive/MyDrive"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
