--- a/labs/MDB_lab1.ipynb
+++ b/labs/MDB_lab1.ipynb
@@ -17,7 +17,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Copy requirements.txt into /content/drive/MyDrive/"
+        "git clone https://github.com/sujee/mongodb-atlas-vector-search.git\n",
+        "\n",
+        "Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into /content/drive/MyDrive"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
@@ -48,7 +50,7 @@
       "metadata": {
         "id": "pozEcsdxIlxd"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -69,7 +71,7 @@
       "metadata": {
         "id": "6Z1hF5x_IqlI"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -103,7 +105,7 @@
         "id": "m-8m9dKTEtN1",
         "outputId": "f4b834c2-a0d6-4c90-8541-6077506afe48"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,7 +125,7 @@
       "metadata": {
         "id": "8QbQH6Ek_KD0"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -150,7 +152,7 @@
         "id": "5yZ-1bc5_Q43",
         "outputId": "6e2594d3-2333-44c1-af06-8303c0f27911"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
