--- a/labs/MDB_lab2_2.ipynb
+++ b/labs/MDB_lab2_2.ipynb
@@ -17,9 +17,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "git clone https://github.com/sujee/mongodb-atlas-vector-search.git\n",
+        "git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
         "\n",
-        "Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into /content/drive/MyDrive/"
+        "Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into your root directory"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "pozEcsdxIlxd"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -71,7 +71,7 @@
       "metadata": {
         "id": "6Z1hF5x_IqlI"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -89,7 +89,7 @@
       "metadata": {
         "id": "AxNeNGSqIywX"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "6qlYB5MXWPAn"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +120,7 @@
         "id": "z98OsbsyWUUj",
         "outputId": "bb82b017-cef9-44b8-9f2b-476069fa086c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,7 +148,7 @@
         "id": "py3LPMTzWeOX",
         "outputId": "0a029b93-2f51-4953-b888-0dfb11d702ca"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,7 +196,7 @@
       "metadata": {
         "id": "XUWy7P6Idze0"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +235,7 @@
         "id": "I05iGVmqeCbO",
         "outputId": "a6789412-d4d8-4eea-e0dd-13e2d8c747a2"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -271,7 +271,7 @@
         "id": "1UlshjGscvdn",
         "outputId": "211cde59-efb4-49f8-c2fc-858a97546d6a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "bBf7G8T0eRMg"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
