--- a/labs/MDB_lab2_1.ipynb
+++ b/labs/MDB_lab2_1.ipynb
@@ -17,9 +17,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "git clone https://github.com/sujee/mongodb-atlas-vector-search.git\n",
+        "git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
         "\n",
-        "Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into /content/drive/MyDrive"
+        "Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into your root directory"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
