cleanup on aslie 8

--- a/labs/MDB_lab1.ipynb
+++ b/labs/MDB_lab1.ipynb
@@ -17,9 +17,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
+        "> For Google Colab Only\n",
+        ">> git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
         "\n",
-        "Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into your root directory"
+        ">> Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into your root directory"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
@@ -33,14 +34,24 @@
       },
       "outputs": [],
       "source": [
-        "!pip install google-cloud-secret-manager\n",
-        "!pip install --upgrade google-auth\n",
         "!pip install -r requirements.txt"
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###Google Only Code"
+      ],
+      "metadata": {
+        "id": "nwevnHVg4DdJ"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "!pip install google-cloud-secret-manager\n",
+        "!pip install --upgrade google-auth\n",
+        "\n",
         "import os\n",
         "\n",
         "from google.cloud import secretmanager\n",
