--- a/labs/MDB_lab2_1.ipynb
+++ b/labs/MDB_lab2_1.ipynb
@@ -17,9 +17,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
+        "> For Google Colab Only\n",
+        ">> git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
         "\n",
-        "Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into your root directory"
+        ">> Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into your root directoryy"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
@@ -39,8 +40,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "### Google Only Code"
+      ],
+      "metadata": {
+        "id": "H9Kyc1Oc4dX4"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
+        "!pip install google-cloud-secret-manager\n",
+        "!pip install --upgrade google-auth\n",
+        "\n",
         "import os\n",
         "\n",
         "from google.cloud import secretmanager\n",
