--- a/labs/MDB_lab3_1.ipynb
+++ b/labs/MDB_lab3_1.ipynb
@@ -309,19 +309,19 @@
         "        print (f\"Getting embeddings from OpenAI took {(t1b-t1a)*1000:,.0f} ms\")\n",
         "\n",
         "    t2a = time.perf_counter()\n",
-        "    movies = atlas_client.vector_search(collection_name=COLLECTION_NAME, index_name=INDEX_NAME, attr_name='embedding',embedding_vector=embedding,limit=10 )\n",
+        "    chunks = atlas_client.vector_search(collection_name=COLLECTION_NAME, index_name=INDEX_NAME, attr_name='embedding',embedding_vector=embedding,limit=10 )\n",
         "    t2b = time.perf_counter()\n",
         "\n",
-        "    print (f\"Altas query returned {len (movies)} movies in {(t2b-t2a)*1000:,.0f} ms\")\n",
+        "    print (f\"Altas query returned {len (chunks)} movies in {(t2b-t2a)*1000:,.0f} ms\")\n",
         "\n",
-        "    for idx, movie in enumerate (movies):\n",
-        "         print(f'{idx+1}\\nid: {movie[\"_id\"]}\\ntext: {movie[\"text\"]}' +\n",
-        "         f'\\nsearch_score(meta):{movie[\"search_score\"]}n')"
+        "    for idx, chunk in enumerate (chunks):\n",
+        "         print(f'{idx+1}\\nid: {chunk[\"_id\"]}\\ntext: {chunk[\"text\"]}' +\n",
+        "         f'\\nsearch_score(meta):{chunk[\"search_score\"]}n')"
       ],
       "metadata": {
         "id": "bBf7G8T0eRMg"
       },
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -333,19 +333,6 @@
       ],
       "metadata": {
         "id": "6mxcwubzeiAg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "query=\"fatalistic sci-fi movies\"\n",
-        "\n",
-        "do_vector_search (query=query)"
-      ],
-      "metadata": {
-        "id": "Vvmf8xV4ezCU"
       },
       "execution_count": null,
       "outputs": []
