--- a/MDB_emedded_datasets.ipynb
+++ b/MDB_emedded_datasets.ipynb
@@ -17,8 +17,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Load the dataset from Hugging Face (AIatMongoDB/embedded_movies)\n",
-        "Link: https://huggingface.co/datasets/AIatMongoDB/embedded_movies"
+        "# Load the dataset from Hugging Face (AIatMongoDB/)\n",
+        "Link: https://huggingface.co/datasets/AIatMongoDB/..."
       ],
       "metadata": {
         "id": "TIsBaLX0TN3_"
@@ -49,7 +49,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ['MONGODB_ATLAS_URI'] = 'mongodb+srv://user:password@cluster0.ozciyn7.mongodb.net/?retryWrites=true&w=majority'"
+        "os.environ['MONGODB_ATLAS_URI'] = 'mongodb+srv://userid:password@cluster0.ozciyn7.mongodb.net/?retryWrites=true&w=majority'"
       ],
       "metadata": {
         "id": "Jvq1brSA0p6_"
@@ -76,8 +76,14 @@
       "source": [
         "uri = os.environ.get('MONGODB_ATLAS_URI')\n",
         "client = MongoClient(uri)\n",
+        "\n",
+        "#db_name = 'whatscooking'\n",
+        "#collection_name = 'restaurants'\n",
+        "#hf_dataset = 'AIatMongoDB/whatscooking.restaurants'\n",
+        "\n",
         "db_name = 'sample_mflix'\n",
-        "collection_name = 'embedded_movies'"
+        "collection_name = 'embedded_items'\n",
+        "hf_dataset = 'AIatMongoDB/embedded_movies'"
       ],
       "metadata": {
         "id": "iEXD37PDr29k"
@@ -88,7 +94,7 @@
     {
       "cell_type": "code",
       "source": [
-        "embedded_movies_collection = client[db_name][collection_name]"
+        "embedded_items_collection = client[db_name][collection_name]"
       ],
       "metadata": {
         "id": "T9nGB8uc7VNF"
@@ -108,10 +114,10 @@
     {
       "cell_type": "code",
       "source": [
-        "doc_count = embedded_movies_collection.count_documents (filter = {})\n",
+        "doc_count = embedded_items_collection.count_documents (filter = {})\n",
         "print (f\"Document count before delete : {doc_count:,}\")\n",
         "\n",
-        "result = embedded_movies_collection.delete_many(filter= {})\n",
+        "result = embedded_items_collection.delete_many(filter= {})\n",
         "print (f\"Deleted docs : {result.deleted_count}\")"
       ],
       "metadata": {
@@ -119,7 +125,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rGOvb-QDCi2K",
-        "outputId": "72ff55e8-f603-416b-db7b-5a431ccf68ea"
+        "outputId": "6aa3f069-bb77-4af0-9c51-1ec7b4e7cd37"
       },
       "execution_count": null,
       "outputs": [
@@ -127,8 +133,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Document count before delete : 1,500\n",
-            "Deleted docs : 1500\n"
+            "Document count before delete : 0\n",
+            "Deleted docs : 0\n"
           ]
         }
       ]
@@ -136,7 +142,7 @@
     {
       "cell_type": "code",
       "source": [
-        "dataset = load_dataset(\"AIatMongoDB/embedded_movies\")"
+        "dataset = load_dataset(hf_dataset)"
       ],
       "metadata": {
         "id": "WLo8HbFU7awh"
@@ -156,22 +162,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#print(dataset)\n",
-        "for movie in dataset['train']:\n",
-        "    doc_movie = json_util.loads(json_util.dumps(movie))\n",
-        "    print(doc_movie)\n",
-        "    break"
-      ],
-      "metadata": {
-        "id": "qacsR0uAE9bf"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "insert_data = []\n"
+        "insert_data = []"
       ],
       "metadata": {
         "id": "VEqpUoKs7k3J"
@@ -191,16 +182,16 @@
     {
       "cell_type": "code",
       "source": [
-        "for movie in dataset['train']:\n",
-        "    doc_movie = json_util.loads(json_util.dumps(movie))\n",
-        "    insert_data.append(doc_movie)\n",
+        "for item in dataset['train']:\n",
+        "    doc_items = json_util.loads(json_util.dumps(item))\n",
+        "    insert_data.append(doc_items)\n",
         "    if len(insert_data) == 1000:\n",
-        "        embedded_movies_collection.insert_many(insert_data)\n",
+        "        embedded_items_collection.insert_many(insert_data)\n",
         "        print(\"1000 records ingested\")\n",
         "        insert_data = []\n",
         "\n",
         "if len(insert_data) > 0:\n",
-        "    embedded_movies_collection.insert_many(insert_data)\n",
+        "    embedded_items_collection.insert_many(insert_data)\n",
         "    insert_data = []\n",
         "\n",
         "print(\"Data Ingested\")"
