--- a/labs/MDB_lab2_1.ipynb
+++ b/labs/MDB_lab2_1.ipynb
@@ -17,10 +17,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> For Google Colab Only\n",
-        ">> git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
+        ">For Googla Colab Only\n",
         "\n",
-        ">> Copy requirements.txt, AtlasClient.py, and OpenAIClient.py into your root directoryy"
+        ">>git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.giy"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
