--- a/labs/MDB_lab2_4.ipynb
+++ b/labs/MDB_lab2_4.ipynb
@@ -17,15 +17,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> For Google Colab Only\n",
+        ">For Googla Colab Only\n",
         "\n",
-        "```\n",
-        "git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
-        "\n",
-        "cp Hackathon-2-22-24/*.py .\n",
-        "\n",
-        "cp Hackathon-2-22-24/*.txt .\n",
-        "```\n"
+        ">>git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.gi`\n"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
