--- a/labs/MDB_lab3_2.ipynb
+++ b/labs/MDB_lab3_2.ipynb
@@ -17,15 +17,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> For Google Colab Only\n",
+        "# Create addtional embeddings in Atlas (for sample_mflix))\n",
+        "## Using LLama Index"
+      ],
+      "metadata": {
+        "id": "_Jni6zsUJ3Ah"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">For Googla Colab Only\n",
         "\n",
-        "```\n",
-        "git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
-        "\n",
-        "cp Hackathon-2-22-24/*.py .\n",
-        "\n",
-        "cp Hackathon-2-22-24/*.txt .\n",
-        "```\n"
+        ">>git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.gi"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
@@ -87,7 +91,7 @@
       "metadata": {
         "id": "6Z1hF5x_IqlI"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -105,7 +109,7 @@
       "metadata": {
         "id": "AxNeNGSqIywX"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,7 +123,7 @@
       "metadata": {
         "id": "6qlYB5MXWPAn"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +141,7 @@
         "id": "11tJ-hjWhIqW",
         "outputId": "756cbdbe-7213-4fe5-80e6-a627fbf35758"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -163,7 +167,7 @@
         "id": "-NQd2DOTZ3Vg",
         "outputId": "fb2ebe33-dd64-447f-d30f-11b6a0152d58"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,7 +202,7 @@
       "metadata": {
         "id": "8ViU9jLWToCn"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -226,7 +230,7 @@
         "id": "KGnueEwgeJoZ",
         "outputId": "6b518a9d-32a8-4553-8ab8-b682fe9af462"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +265,7 @@
         "id": "doul3_ujeWw9",
         "outputId": "cad0074a-dbc5-431e-e91d-44c34cefc317"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -293,7 +297,7 @@
       "metadata": {
         "id": "a44RPvJmecAQ"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -342,7 +346,7 @@
         "id": "pkMzz1anej4O",
         "outputId": "b67f8660-2e88-4ff2-c95b-a3cc3a5190ba"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -390,7 +394,7 @@
         "id": "smzUwlYGeqwk",
         "outputId": "470474fe-c32b-4e20-fccb-d7919a168039"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
