--- a/labs/MDB_lab4_1.ipynb
+++ b/labs/MDB_lab4_1.ipynb
@@ -17,15 +17,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> For Google Colab Only\n",
+        "# Load Uber and Lyft 10K PDF files into a vector store\n",
+        "## Using LLama Index\n"
+      ],
+      "metadata": {
+        "id": "gdA3nw5lIkXf"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        ">For Googla Colab Only\n",
         "\n",
-        "```\n",
-        "git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.git\n",
-        "\n",
-        "cp Hackathon-2-22-24/*.py .\n",
-        "\n",
-        "cp Hackathon-2-22-24/*.txt .\n",
-        "```\n"
+        ">>git clone https://github.com/OperationalizingAI/Hackathon-2-22-24.gi"
       ],
       "metadata": {
         "id": "FPCoRhb3NMT6"
@@ -102,7 +106,7 @@
       "metadata": {
         "id": "6Z1hF5x_IqlI"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +124,7 @@
       "metadata": {
         "id": "AxNeNGSqIywX"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,7 +151,7 @@
       "metadata": {
         "id": "6qlYB5MXWPAn"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -164,7 +168,7 @@
         "id": "11tJ-hjWhIqW",
         "outputId": "9256f9e6-b43b-4b3b-a510-8a87f407beb7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -194,7 +198,7 @@
         "id": "rAiGr9avCe26",
         "outputId": "4de40b52-6c70-477e-e4cb-b58b9c18ba2b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +236,7 @@
         "id": "t3xdDqvNOU7T",
         "outputId": "38a85bef-f72e-4575-846c-a862856c0fd9"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +263,7 @@
       "metadata": {
         "id": "UQzH6eEeTypa"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -272,7 +276,7 @@
       "metadata": {
         "id": "eE8kU0FZloo4"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -284,7 +288,7 @@
       "metadata": {
         "id": "ld3SHQ10RN0Q"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
